tests/baselines/reference/project/jsFileCompilationDifferentNamesSpecified/node/jsFileCompilationDifferentNamesSpecified.errors.txt
error TS6054: File 'DifferentNamesSpecified/b.js' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts'. Did you mean to enable the 'allowJs' option?
DifferentNamesSpecified/tsconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


!!! error TS6054: File 'DifferentNamesSpecified/b.js' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts'. Did you mean to enable the 'allowJs' option?
==== DifferentNamesSpecified/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "out": "test.js" },
                           ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
      "files": [ "a.ts", "b.js" ]
    }
==== DifferentNamesSpecified/a.ts (0 errors) ====
    var test = 10;